@@ -33,7 +33,7 @@ repositories {
             name = 'Private-Token'
             value = gitLabPrivateToken
         }
-        maven { url = 'https://packages.jetbrains.team/maven/p/ij/intellij-dependencies' }
+        maven { url = "https://packages.jetbrains.team/maven/p/ij/intellij-dependencies" }
         authentication {
             header(HttpHeaderAuthentication)
         }
@@ -101,13 +101,10 @@ dependencies {
     implementation 'org.apache.logging.log4j:log4j-api:2.17.2'
     implementation 'org.apache.logging.log4j:log4j-core:2.17.2'
     implementation 'com.github.javaparser:javaparser-core:3.24.8'
+    implementation 'com.google.code.gson:gson:2.8.5'
 //    implementation 'com.github.javafaker:javafaker:1.0.2'
     implementation 'io.minio:minio:8.4.3'
     testImplementation 'org.mockito:mockito-core:4.0.0'
-
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.2'
-    testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.10.0'
 
     implementation 'com.squareup.okhttp3:okhttp:4.9.0'
 //    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.15.2'
@@ -122,6 +119,10 @@ dependencies {
 
     testImplementation 'com.intellij.remoterobot:remote-robot:' + remoteRobotVersion
     testImplementation 'com.intellij.remoterobot:remote-fixtures:' + remoteRobotVersion
+
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.0'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.2'
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.10.0'
 
 //    implementation files("/Users/artpar/.m2/repository/video/bug/unlogged-sdk/0.1.12/unlogged-sdk-0.1.12.jar")
 //    annotationProcessor files("/Users/artpar/.m2/repository/video/bug/unlogged-sdk/0.1.12/unlogged-sdk-0.1.12.jar")
@@ -147,7 +148,7 @@ runPluginVerifier {
 
 // See https://github.com/JetBrains/gradle-intellij-plugin/
 intellij {
-    version = '2021.3.3'
+    version = '2022.3.3'
     plugins = ['com.intellij.java', 'maven', 'gradle', 'org.jetbrains.kotlin']
     updateSinceUntilBuild = false
     sameSinceUntilBuild = true
@@ -215,6 +216,10 @@ publishPlugin {
 }
 
 runIdeForUiTests {
+
+    jvmArgs = [
+            "--add-opens java.base/java.lang=ALL-UNNAMED"
+    ]
     systemProperty "robot-server.port", "8082"
     systemProperty "ide.mac.message.dialogs.as.sheets", "false"
     systemProperty "jb.privacy.policy.text", "<!--999.999-->"
@@ -233,7 +238,7 @@ downloadRobotServerPlugin {
 test {
     useJUnitPlatform()
     jvmArgs = [
-            "-Xmx512G"
+            "--add-opens java.base/java.lang=ALL-UNNAMED"
     ]
 }
 //sourceCompatibility = JavaVersion.VERSION_17
